--- a/src/app/Modules/dashboard/dashboard.component.html
+++ b/src/app/Modules/dashboard/dashboard.component.html
@@ -1,9 +1,10 @@
 <div>
     <mat-form-field>
         <mat-label>Enviroment</mat-label>
+        <br>
         <mat-select disableRipple>
           <mat-option value="1">Devlopment</mat-option>
-          <mat-option value="2">UA</mat-option>
+          <mat-option value="2">UAT</mat-option>
           <mat-option value="3">Production</mat-option>
         </mat-select>
       </mat-form-field>
@@ -11,8 +12,8 @@
     <app-cpu-utliz></app-cpu-utliz>
     <br>
     <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px">
-        <mat-card fxflex="10">Chars</mat-card>
-        <mat-card fxflex="10">table</mat-card>
+        <mat-card fxflex="75">Charts</mat-card>
+        <mat-card fxflex="30">table</mat-card>
     </div>
     
 </div>
