--- a/src/app/Shared/widgets/cpu-utliz/cpu-utliz.component.html
+++ b/src/app/Shared/widgets/cpu-utliz/cpu-utliz.component.html
@@ -1,3 +1,3 @@
 <highcharts-chart 
   [Highcharts]="Highcharts" [options]="chartOptions"
-  style="width: 100%; height: 30%; display: block;"></highcharts-chart>
+  style="width: 100%; height: 300px; display: block;"></highcharts-chart>
