--- a/src/app/Modules/dashboard/dashboard.component.scss
+++ b/src/app/Modules/dashboard/dashboard.component.scss
@@ -4,3 +4,15 @@
     
 
 }
+table {
+    width: 100%;
+  }
+
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  .border {
+
+    padding: 2%
+  }
