--- a/src/app/Modules/dashboard/dashboard.component.html
+++ b/src/app/Modules/dashboard/dashboard.component.html
@@ -1,41 +1,87 @@
-<div>
+<div class ="border">
   <mat-card>
     <div fxLayout="column"  fxLayoutGap="20px">
      <mat-card class="dropDown">          
         <mat-label>Select an Enviroment</mat-label>
-        <br>
-        <br>
-         <mat-select disableRipple>
+          <br>
+          <br>
+           <mat-select disableRipple>
             <mat-option value="1">Devlopment</mat-option>
-           <mat-option value="2">UAT</mat-option>
-           <mat-option value="3">Production</mat-option>
-         </mat-select>
+            <mat-option value="2">UAT</mat-option>
+            <mat-option value="3">Production</mat-option>
+           </mat-select>
     </mat-card>
         <mat-card class="graph">    
-            <app-cpu-utliz></app-cpu-utliz>
+            <app-cpu-utliz [data]='bigchart'></app-cpu-utliz>
         </mat-card>
 
-             <br>
-      <div fxLayout="row"  fxLayoutGap="20px" fxLayoutAlign="space-between center">
-        <mat-card fxflex="40">
-          table
-        </mat-card>
-        <mat-card fxflex="60">
-          <app-pie-chart></app-pie-chart>
-        </mat-card>
+          <br>
+          <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px">
+            
+           <div fxFlex="60%"> 
+            <mat-card>
+              <mat-card-header>
+                <mat-card-title>Current Active Users</mat-card-title>
+              </mat-card-header>   
+               <div class="mat-elevation-z8">               
+            <table mat-table [dataSource]="dataSource">
+          
+              <!-- Position Column -->
+              <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+              </ng-container>
+          
+              <!-- Name Column -->
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              </ng-container>
+          
+              <!-- Weight Column -->
+              <ng-container matColumnDef="weight">
+                <th mat-header-cell *matHeaderCellDef> Weight </th>
+                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+              </ng-container>
+          
+              <!-- Symbol Column -->
+              <ng-container matColumnDef="symbol">
+                <th mat-header-cell *matHeaderCellDef> Symbol </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+              </ng-container>
+          
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+          
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+               </div> 
+              </mat-card>        
+           </div>
+      
+        <div fxFlex ="40%">
+          <mat-card><app-pie-chart [data]="piechart"></app-pie-chart></mat-card></div>
+          
+          
+
       </div>
     
     </div>
   </mat-card>
 </div>
-
-<mat-divider></mat-divider>
-
 <br>
 <br>
 
-<div>
+<div class ="border">
   <mat-card>
-    <div>table</div>
+    <mat-card-header>
+      <mat-card-title>Server Details</mat-card-title>
+    </mat-card-header>
+    <mat-tab-group>
+      <mat-tab label="Users Details"> <app-table></app-table>            </mat-tab>
+      <mat-tab label="Job Details"><app-table></app-table></mat-tab>
+      <mat-tab label="Service Details"><app-table></app-table></mat-tab>
+    </mat-tab-group>
+
   </mat-card>
 </div>
